# spotifile

./: .gitignore  .travis.yml  LICENSE  Makefile  Makefile.am  README.md  configure.ac  genver.sh  index.html  install_libspotify.sh  libspotify-Makefile.patch  params.json  spfs_fuse.c  spfs_spotify.c  spotify-fs.c  spotify-fs.h
build-aux/: mkrelease.sh  spfs-version-gen
src/: spfs_appkey.c  spfs_appkey.h  spfs_audio.c  spfs_audio.h  spfs_format.c  spfs_format.h  spfs_fuse.c  spfs_fuse.h  spfs_fuse_album.c  spfs_fuse_album.h  spfs_fuse_artist.c  spfs_fuse_artist.h  spfs_fuse_audiofile.c  spfs_fuse_audiofile.h  spfs_fuse_entity.c  spfs_fuse_entity.h  spfs_fuse_playlist.c  spfs_fuse_playlist.h  spfs_fuse_search.c  spfs_fuse_search.h  spfs_fuse_track.c  spfs_fuse_track.h  spfs_fuse_utils.c  spfs_fuse_utils.h  spfs_path.c  spfs_path.h  spfs_spotify.c  spfs_spotify.h  spotify-fs.c  spotify-fs.h  string_utils.c  string_utils.h  xspf.c  xspf.h  xspf_sanitize.c  xspf_sanitize.h
src/scripts/: mount.spotifile  spotifile-rofi
tests/: sanitize_test.c  spfs_fuse_test.c  spfs_fuse_utils_test.c  test_spotifile.py  xspf_test.c
tests/integration/: integration.py
